--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        #error{
-            color: red;
-        }
-    </style>
+
 </head>
 <body>
      <!-- Calculator HTML-->
+      <h1> Calculator </h1>
       <h1 id="num1-el"></h1>
       <h1 id="num2-el"></h1> 
       <br>
