--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
      <!-- Calculator HTML-->
-      <h1> Calculator </h1>
+      <h1> Static Calculator </h1>
       <h1 id="num1-el"></h1>
       <h1 id="num2-el"></h1> 
       <br>
